@@ -97,10 +97,12 @@ function pandora_update_manager_install () {
 	
 	load_update_manager_lib ();
 	
-	if ($config['update_manager_installed'] == 1) {
-		return;
+	if (isset($config['update_manager_installed'])) {
+		if ($config['update_manager_installed'] == 1) {
+			return;
+		}
 	}
-
+	
 	/* SQL installation */
 	switch ($config['dbtype']) {
 		case 'mysql':
